@@ -20,6 +20,10 @@ Release 1.1 Start 14/02/2021
 09. added evaluate.c, evaluate.h, for evaluate()
 - 26/05/2021
 10. qprintf: pad with zeros for numbers
+- 29/05/2021
+11. configure.ac: define SYSCONFDIR for leapsecs.dat
+12. leapsecs_read.c: use SYSCONFDIR for leapsecs.dat
+13. default.configure: added --syscondir=/etc/indimail
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
